--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AirlineClientWeb</title>
+  <title>Newsfeed App Demo</title>
+  <meta name="author" content="Ed Hansen">
+  <meta name="keywords" content="Angular 10 Newsfeed">
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
